@@ -41,21 +41,57 @@ The recipe supports the following options:
   can be used here. Default value ``This Trac instance was generated by
   <a href="http://pypi.python.org/pypi/pbp.recipe.trac">pbp.recipe.trac</a>.``.
 
-``smtp-server``
+``smtp-always-bcc``
 
-  Server used to send notification mails.
+  Email address(es) to always send notifications to, addresses do not appear
+  publicly (Bcc:).
 
-``smtp-port``
+``smtp-always-cc``
 
-  Port to use on the mail server.
+  Email address(es) to always send notifications to, addresses can be seen by
+  all recipients (Cc:).
+
+``smtp-default-domain``
+
+  Default host/domain to append to address that do not specify one
+
+``smtp-enabled``
+
+  Enable SMTP (email) notification.
 
 ``smtp-from``
 
-  The mail address from which notification mails appears to be sent from.
+  Sender address to use in notification emails.
+
+``smtp-from-name``
+
+  Sender name to use in notification emails.
+
+``smtp-password``
+
+  Password for SMTP server.
+
+``smtp-port``
+
+  SMTP server port to use for email notification.
 
 ``smtp-replyto``
 
-  The mail address that will be used if you try to reply to mail notifications.
+  Reply-To address to use in notification emails.
+
+``smtp-server``
+
+  SMTP server hostname to use for email notifications.
+
+``smtp-subject-prefix``
+
+  Text to prepend to subject line of notification emails. If the setting is not
+  defined, then the value of ``project-name`` is used as prefix. If no prefix
+  is desired,then specifying an empty option will disable it.
+
+``smtp-user``
+
+  Username for SMTP server.
 
 
 Example usage
